@@ -19,10 +19,12 @@ Version 1.0.8.4
      * Property Files (Edy Hinzen)
      * Whois (RPSL format) entries (Benny Baumann)
   -  Changed INT_BASIC number format to allow numbers followed . at EOL (BenBE)
+  -  Higher prority for keywords over regexps (BenBE)
   -  Improvements to language files (BenBE)
      * Removed some superfluous keywords from ABAP (BenBE)
      * Removed duplicate keywords for Progress (BenBE)
      * Removed duplicate keywords for T-SQL (BenBE)
+     * Linking for PowerShell special variables revised (BenBE)
 Version 1.0.8.3
   -  Added language files
      * DCS (Stelio Passaris)
